--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,6 +2,8 @@
 @import 'global';
 @import 'fonts';
 
+// Start Header
+
 .header__top {
     background-color: #eef1f3;
 }
@@ -18,7 +20,7 @@
 }
 
 .header-btn {
-    padding: 14px 30px 12px 18px;
+    padding: 15px 30px 15px 18px;
     border-radius: 50px;
     background-color: $blue;
     color: white;
@@ -27,6 +29,60 @@
     line-height: 0px;
     margin-left: auto;
     margin-right: 50px;
+}
+
+.header__box {
+    margin-top: -27px;
+    font-weight: 500;
+    font-size: 14px;
+     
+    &-bell {
+        position: relative;
+        padding: 6px 10px 6px 10px;
+        border-radius: 50px;
+        background-color: #ff6a6c;
+        color: white;
+        margin-right: 29px;
+    }
+
+    &-bell::before {
+        content: url(../images/icon/bell.png);
+        position: absolute;
+        left: -10px;
+        top: 17px;
+    }
+
+    &-letter {
+        position: relative;
+        padding: 6px 10px 6px 10px;
+        border-radius: 50px;
+        background-color: #62d03b;
+        color: white;
+        margin-right: 32px;
+    }
+
+    &-letter::before {
+        content: url(../images/icon/letter.png);
+        position: absolute;
+        left: -19px;
+        top: 17px;
+    }
+
+    &-basket {
+        position: relative;
+        padding: 6px 10px 6px 10px;
+        border-radius: 50px;
+        background-color: $blue;
+        color: white;
+        margin-right: 30px;
+    }
+
+    &-basket::before {
+        content: url(../images/icon/basket.png);
+        position: absolute;
+        left: -16px;
+        top: 17px;
+    }
 }
 
 .header__user {
@@ -48,9 +104,6 @@
     justify-content: space-between;
     align-items: center;
     height: 80px;
-
-
-
 }
 
 .menu__list {
@@ -69,6 +122,11 @@
 
     .menu__list--link {
         color: $black;
+        transition: 1s;
+    }
+
+    .menu__list--link:hover {
+        color: $blue;
     }
 }
 
@@ -90,7 +148,7 @@
 
         &:focus {
             border-radius: 50px;
-            border: solid 1px $black;
+            border: solid 1px $blue;
         }
 
         &::placeholder {
@@ -116,29 +174,55 @@
     }
 }
 
+// End Header
+
+// Start Search
+
 .search {
+    position: relative;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    min-height: 725px;
+    height: 725px;
+
+    &::after {
+        content: url(../images/search-bg.png);
+        position: absolute;
+        bottom: -48px;
+        left: 221px;
+    }
+
+    &::before {
+        content: url(../images/search-bg-2.png);
+    
+        position: absolute;
+
+        bottom: -60px;
+        left: 204px;
+        z-index: 1;
+    }
 }
 
 .search__inner {
+    position: relative;
     padding: 185px 0 100px;
     color: white;
     text-align: center;
+
     &-general {
         margin-bottom: 26px;
         font-size: 60px;
         font-weight: 400;
     }
+
     &-title {
         margin-bottom: 48px;
         font-size: 60px;
         font-weight: 700;
-        
+
     }
-    &-text{
+
+    &-text {
         margin-bottom: 68px;
         font-size: 20px;
         font-weight: 500;
@@ -148,12 +232,15 @@
 .search__inner-btn {
     font-weight: 400;
     font-size: 16px;
+
     &--one {
         padding: 22px 32px;
         border-radius: 50px;
-        background-color: white;
-        color: $blue;
+        background-color: transparentize;
+        border: 1px solid white;
+        color: white;
     }
+
     &--two {
         margin-left: 30px;
         padding: 22px 32px;
@@ -163,4 +250,611 @@
         color: white;
     }
 
+    &--one:hover,
+    &--two:hover {
+        background-color: white;
+        color: $blue;
+    }
+
 }
+
+.search__box {
+    position: absolute;
+    display: flex;
+    justify-content: start;
+    top: 658px;
+    width: 1140px;
+    border-radius: 6px;
+    background-color: white;
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.08);
+    z-index: 2;
+}
+
+.products {
+    margin: 40px auto 40px 40px;
+    padding-left: 30px;
+    height: 55px;
+    width: 612px;
+    border: 1px solid #d9dfe5;
+    border-radius: 4px 0 0 4px;
+    font-size: 16px;
+    font-weight: 400;
+    outline: none;
+
+    &:focus {
+        border-radius: 4px 0 0 4px;
+        border: solid 1px $blue;
+    }
+}
+
+.category {
+    height: 55px;
+    width: 195px;
+    margin: 40px auto 40px 0px;
+    border: 1px solid #d9dfe5;
+    border-radius: 0px 4px 4px 0px;
+    color: #555555;
+    padding-top: 16px;
+    padding-right: 45px;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.search-button-all {
+    margin: 40px 40px 40px auto;
+    height: 55px;
+    width: 222px;
+    border-radius: 4px;
+    background-color: $blue;
+    border: none;
+    color: white;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.category-list {
+    border: none;
+    position: relative;
+    outline: none;
+    padding: 5px;
+    padding-left: 20px;
+    width: 180px;
+    color: #555555;
+    font-size: 16px;
+    font-weight: 400;
+    appearance: none;
+    background-image: url(../images/searchdown.png);
+    background-repeat: no-repeat;
+    background-position-x: 160px;
+    background-position-y: 10px;
+}
+
+// End Search
+
+// Start Advantage
+
+.advantage-inner {
+    margin: 185px 50px 170px 50px;
+    display: flex;
+    justify-content: space-between;
+    font-weight: 400;
+
+    .imag {
+        text-align: center;
+    }
+
+    .two {
+        margin-top: -8px;
+    }
+
+    .title {
+        text-align: center;
+        padding-top: 38px;
+        font-size: 24px;
+        color: $black;
+    }
+
+    .text {
+        text-align: center;
+        padding-top: 35px;
+        font-size: 16px;
+        line-height: 30px;
+        color: #555555;
+    }
+
+}
+
+.advantage-list {
+    max-width: 320px;
+
+}
+
+.advantage-list:hover {
+    border-radius: 4px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.08);
+    padding: 40px 15px 51px 15px;
+    width: 361px;
+    height: 403px;
+}
+
+
+// End Advantage
+
+// Start Slaider
+
+.slaider {
+    padding-top: 118px;
+    padding-bottom: 116px;
+    background-color: #eff1f5;  
+}
+
+.slaider-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 4px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+}
+
+.slaider-arrows {
+    padding-right: 30px;
+    
+}
+
+.slick-arrow {
+    border: none;
+    background-color: rgb(115, 71, 193);
+    border-radius: 50px;
+    color: white;
+    padding: 10px;
+    transition: background-color 0.3s ease-in-out;
+    cursor: pointer;
+    outline: transparent;
+    
+    &:hover {
+      background-color: rgba(#7347c1, 0.8);
+    }
+
+    &--prev {
+      border-radius: 30px 0 0 30px;
+    }
+    
+    &--next {
+      border-radius: 0px 30px 30px 0;
+      margin-left: -5px;
+    }
+  }
+
+  .slick-arrow--next::after {
+      content: url(../images/right.png);
+  }
+
+  .slick-arrow--prev::after {
+    content: url(../images/left.png);
+}
+
+.slaider-title {
+    font-size: 30px;
+    font-weight: 400;
+    color: $black;
+    padding: 47px 200px 47px 30px;
+}
+
+.slaider-inner {
+    display: flex !important;
+    justify-content: center;
+    border-radius: 4px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 2px 30px 0px rgba(147, 155, 168, 0.1);// 
+    margin-top: 48px;
+}
+
+.product__item-tegs {
+    font-size: 15px;
+    font-weight: 400;
+    color: #868c96;
+    padding: 1px 12px 1px 15px;
+    border-radius: 50px;
+    background-color: #eff1f5;
+    margin-top: 25px;
+    text-align: start;
+}
+
+.slaider-about {
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 40px;
+}
+
+.slaider-price {
+    margin-left: 30px;
+    padding: 8px 17px;
+    border-radius: 50px;
+    background-color: $blue;
+    font-weight: 500;
+    font-size: 15px;
+    color: white;
+}
+
+.slaider-like {
+    position: relative;
+    font-weight: 400;
+    font-size: 15px;
+    color: #6f7d8d;
+    margin-left: 45px;
+    margin-top: 10px;
+}
+
+.slaider-like::before {
+    content: url(../images/like.png);
+    position: absolute;
+    left: -20px;
+}
+
+.slaider-basket {
+    position: relative;
+    margin-top: 10px;
+    margin-left: 45px;
+    font-weight: 400;
+    font-size: 15px;
+    color: #0674ec;
+}
+
+.slaider-basket::before {
+    content: url(../images/basket-prod.png);
+    position: absolute;
+    left: -20px;
+}
+
+.slaider-star {
+    margin-top: 10px;
+    margin-left: 170px;
+}
+
+// End Slider
+
+// Start Product
+
+.product {
+    position: relative;
+    padding: 120px 0;
+    background-color: $bgw;
+}
+
+.product__title {
+    display: flex;
+    justify-content: space-between;
+    border-radius: 4px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+}
+
+.product__title-name {
+    padding-top: 45px;
+    padding-left: 30px;
+    padding-bottom: 35px;
+    font-weight: 400;
+    font-size: 30px;
+    color: black;
+}
+
+.product__title-filter {
+    position: relative;
+    border: none;
+    padding-right: 60px;
+    background-color: transparent;
+    font-weight: 400;
+    font-size: 16px;
+    color: $grey;
+    
+    &:hover + .product-drop {
+        display: block;
+    }
+}
+
+.product-drop:hover {
+    display: block;
+}
+
+.product-drop {
+    display: none;
+    position: absolute;
+    top: 204px;
+    right: 199px;
+    border-radius: 3px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 5px 40px 0px rgba(82, 85, 90, 0.2);
+    padding: 27px 53px 27px 27px;  
+}
+
+.drop-down--link {
+    position: relative;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 28px;
+    color: #747b86;
+
+    &:hover {
+        color: $blue;
+    }
+}
+
+.product-drop::before {
+    content: "" ;
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 5px 12px 5px;
+    border-color: transparent transparent rgb(255, 255, 255) transparent;
+    top: 20px;
+    top: -12px;
+    right: 18px
+}
+
+.product__title-filter::after {
+    content: url(../images/icon/Icon.png);
+    position: absolute;
+    left: 93px;
+    top: 48px;
+}
+
+.product__inner-btn {
+    display: flex;
+    justify-content: flex-start;
+    padding-top: 30px;
+    padding-left: 30px;
+    padding-bottom: 30px;
+    margin-top: 30px;
+    margin-bottom: 50px;
+    border-radius: 4px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 1px 2px 0px rgba(90, 93, 100, 0.1);
+
+    .product__inner-buttion {
+        padding: 9px 19px;
+        background-color: #f1f3f6;
+        color: $grey;
+        font-weight: 400;
+        font-size: 15px;
+        border: none;
+        border-radius: 50px;
+        cursor: pointer;
+
+        &+.product__inner-buttion {
+            margin-left: 10px;
+        }
+
+        &:hover {
+            background-color: $blue;
+            color: white;
+        }
+    }
+}
+
+.product__inner-box {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.product__item {
+    margin-bottom: 30px;
+    max-width: 360px;
+    width: 100%;
+    border-radius: 4px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+    padding-bottom: 15px;
+
+    &-title {
+        padding-top: 30px;
+        padding-left: 30px;
+        padding-bottom: 20px;
+        font-weight: 500;
+        font-size: 20px;
+        color: black;
+    }
+
+    &-img {
+        position: relative;
+        height: 230px;
+        width: 360px;
+        background-repeat: no-repeat;
+        display: block;
+        background-position: center;
+        background-size: contain;
+    }
+
+    &-img--bg {
+        position: relative;
+        opacity: 0;
+        height: 230px;
+        width: 360px;
+
+    }
+
+    &-img--bg:hover {
+        opacity: 1;
+        -moz-transition: all 2s ease;
+        -webkit-transition: all 2s ease;
+        -o-transition: all 2s ease;
+        transition: all 2s ease;
+    }
+
+    &-info {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &-author {
+        padding-left: 30px;
+        font-weight: 400;
+        font-size: 15px;
+        color: black;
+        display: flex;
+        align-items: center;
+    }
+
+    &-avt {
+        display: block;
+        width: 28px;
+        height: 28px;
+        border-radius: 50px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin-right: 8px;
+    }
+
+    &-teg {
+        position: relative;
+        margin-top: -23px;
+        margin-left: 206px;
+        font-size: 15px;
+        font-weight: 400;
+        color: #7347c1;
+    }
+
+    &-text {
+        padding-top: 34px;
+        padding-left: 30px;
+        padding-bottom: 35px;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 30px;
+        color: #555555;
+        text-align: start;
+        border-bottom: solid 1px #ececec;
+    }
+
+    &-about {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &-price {
+        margin-left: 30px;
+        padding: 8px 17px;
+        border-radius: 50px;
+        background-color: #e6f1fd;
+        font-weight: 500;
+        font-size: 15px;
+        color: #0674ec;
+    }
+
+    &-like {
+        position: relative;
+        padding-top: 9px;
+        margin-left: -135px;
+        font-weight: 400;
+        font-size: 15px;
+        color: #6f7d8d;
+    }
+
+    &-like::before {
+        content: url(../images/like.png);
+        position: absolute;
+        left: -20px;
+    }
+
+    &-basket {
+        position: relative;
+        padding-top: 9px;
+        margin-right: 30px;
+        font-weight: 400;
+        font-size: 15px;
+        color: #0674ec;
+    }
+
+    &-basket::before {
+        content: url(../images/basket-prod.png);
+        position: absolute;
+        left: -20px;
+    }
+}
+
+.product__item-btn {
+    opacity: 0;
+    position: absolute;
+    border-radius: 50px;
+    border: 1px solid white;
+    background-color: transparent;
+    padding: 16px 28px;
+    width: 130px;
+    font-weight: 500;
+    font-size: 15px;
+    color: white;
+    transition: opacity 3s;
+}
+
+.one {
+    left: 44px;
+    top: 90px;
+}
+
+.two {
+    top: 90px;
+    right: 44px;
+}
+
+.product__item-img:hover .product__item-btn {
+    opacity: 1;
+    transition: opacity 3s;
+
+}
+
+.product__item-btn:hover {
+    background-color: white;
+    color: $blue;
+}
+
+.psd::before {
+    content: url(../images/ps.svg);
+    padding-left: 10px;
+    position: absolute;
+    left: -30px;
+
+}
+
+.html::before {
+    content: url(../images/html.png);
+    padding-left: 10px;
+    position: absolute;
+    left: -30px;
+}
+
+.plugin::before {
+    content: url(../images/wordpress.svg);
+    padding-left: 10px;
+    position: absolute;
+    left: -30px;
+}
+
+.product__butten-btn {
+    margin-top: 28px;
+    text-align: center;
+    margin-bottom: 80px;
+
+    &-all {
+        border-radius: 50px;
+        background-color: $blue;
+        color: white;
+        padding: 22px 33px;
+        border: none;
+        cursor: pointer;
+    }
+
+    &-all:hover {
+        background-color: white;
+        color: $blue;
+    }
+}
+
+.rate-star {
+    margin-right: -80px;
+}
+
+// End Product
